--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "test1",
+            "request": "launch",
+            "mainClass": "test1",
+            "projectName": "Personal-Coding-files_e22c3ee3"
+        },
+        {
             "name": "g++.exe",
             "type": "cppdbg",
             "request": "launch",
